set height to help prevent page shifts

--- a/src/components/Post/Owner/Owner.css
+++ b/src/components/Post/Owner/Owner.css
@@ -9,6 +9,7 @@
 .owner img {
   margin-right: 15px;
   width: 28px;
+  height: 28px;
 }
 
 .owner span {
